# yoro-tutorial

./: .gitignore  LICENSE  README.md
0-env_setup/: README.md
0-environment/: README.md
1-dataset_prep/: README.md
2-training/: README.md  coating.yaml  rotation_anchor.yaml  rotation_classifier.yaml
3-yoro_api/: README.md  demo_detector.cpp  demo_detector.py  demo_rotation_detector.py  export_yoro_dir.py
4-custom_backbone/: README.md
custom_backbone/: README.md  demo_backbone.py  rotanc_custom_bbone.yaml  yoro_custom_bbone.yaml
dataset_prep/: README.md
script/: export_cmake_yoro_dir.py
test/: CMakeLists.txt  test_link.cpp
training/: README.md  coating.yaml  rotation_regressor.yaml
yoro_api/: CMakeLists.txt  README.md  demo_detector.cpp
yoro_api/cmake/: deps.cmake
yoro_api/test/: CMakeLists.txt  test_rotation_detector.cpp
